--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "dependencies": {
     "@diplodoc/client": "^4.1.2",
     "@diplodoc/liquid": "^1.3.4",
+    "@diplodoc/transform": "^4.63.6",
     "@diplodoc/translation": "^1.7.19",
     "chalk": "^4.1.2",
     "commander": "^12.0.0",
@@ -89,6 +90,10 @@
     "js-yaml": "4.1.0",
     "katex": "0.16.9",
     "lodash": "4.17.21",
+    "markdown-it": "^13.0.2",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-meta": "^0.0.1",
+    "markdown-it-sup": "^1.0.0",
     "normalize-path": "3.0.0",
     "p-map": "4.0.0",
     "tapable": "2.2.1",
@@ -104,7 +109,6 @@
     "@diplodoc/openapi-extension": "^3.1.0",
     "@diplodoc/page-constructor-extension": "^0.10.0",
     "@diplodoc/search-extension": "^3.0.0",
-    "@diplodoc/transform": "^4.63.6",
     "@diplodoc/tsconfig": "^1.0.2",
     "@diplodoc/yfmlint": "^1.2.8",
     "@octokit/core": "4.2.4",
