--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   },
   "dependencies": {
     "@diplodoc/client": "^4.1.1",
-    "@diplodoc/liquid": "git+https://github.com/diplodoc-platform/liquid.git#not_var-regexp",
+    "@diplodoc/liquid": "0.0.0-rc-not-var-regexp-202510281012",
     "@diplodoc/translation": "^1.7.17",
     "chalk": "^4.1.2",
     "commander": "^12.0.0",
