fix: no-inline for image in page-constructor

--- a/tests/mocks/assets/input/page.yaml
+++ b/tests/mocks/assets/input/page.yaml
@@ -4,4 +4,4 @@ blocks:
     text: 'Текст'
     border: 'shadow'
     controlPosition: 'content'
-    image: '_images/mountain.jpg'
+    icon: '_images/mountain.jpg'
