--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,9 @@ jobs:
           node-version: 22
           registry-url: 'https://registry.npmjs.org'
       - name: Install latest npm (>= 11.5.1)
-        run: npm install -g npm@latest
+        run: |
+          [ "$(printf '%s\n' "11.5.1" "$(npm -v)" | sort -V | head -n1)" = "11.5.1" ] || npm install -g npm@latest
+        shell: bash
       - uses: codex-team/action-nodejs-package-info@v1
         id: package
       - uses: googleapis/release-please-action@v4
