--- a/.github/workflows/deprecate.yaml
+++ b/.github/workflows/deprecate.yaml
@@ -27,6 +27,10 @@ jobs:
           node-version: 22
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
+      - name: Install latest npm (>= 11.5.1)
+        run: |
+          [ "$(printf '%s\n' "11.5.1" "$(npm -v)" | sort -V | head -n1)" = "11.5.1" ] || npm install -g npm@latest
+        shell: bash
       - uses: codex-team/action-nodejs-package-info@v1
         id: package
       - name: Deprecate target version
@@ -55,5 +59,3 @@ jobs:
 
           echo "::notice::Deprecate $TARGET release. Reason: $MESSAGE"
           npm deprecate "$TARGET" "$MESSAGE"
-
-
