--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -11,7 +11,7 @@ on:
         description: 'Package version'
         required: true
         type: string
-        default: "latest"
+        default: 'latest'
 
 jobs:
   update-package:
@@ -24,6 +24,10 @@ jobs:
           node-version: 22
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
+      - name: Install latest npm (>= 11.5.1)
+        run: |
+          [ "$(printf '%s\n' "11.5.1" "$(npm -v)" | sort -V | head -n1)" = "11.5.1" ] || npm install -g npm@latest
+        shell: bash
       - run: npm ci
       - name: Update package
         run: npm i ${{ inputs.package }}@${{ inputs.version }}
