--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -10,6 +10,7 @@ jobs:
   prerelease:
     runs-on: ubuntu-latest
     if: github.ref_protected != true
+    environment: npm-prerelease
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node 22
