--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -24,10 +24,10 @@ jobs:
         shell: bash
       - run: npm ci
       - run: npm version --no-git-tag-version 0.0.0-rc-$(git branch --show-current)-${{github.run_id}}
-      - run: npm publish --no-tag
+      - run: npm publish --tag $(git branch --show-current)
       - working-directory: tests
         run: npm ci
       - working-directory: tests
         run: npm version --no-git-tag-version 0.0.0-rc-$(git branch --show-current)-${{github.run_id}}
       - working-directory: tests
-        run: npm publish --no-tag
+        run: npm publish --tag $(git branch --show-current)
