--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,6 +9,7 @@
       "prerelease": false,
       "changelog-sections": [
         {"type": "feat", "section": "Features", "hidden": false},
+        {"type": "fix", "scope": "deps", "section": "Dependency update:", "hidden": false},
         {"type": "fix", "section": "Bug Fixes", "hidden": false},
         {"type": "perf", "section": "Performance Improvements", "hidden": false},
         {"type": "deps", "section": "Dependency update", "hidden": false}
