feat: add themer

--- a/package.json
+++ b/package.json
@@ -80,7 +80,10 @@
     "@diplodoc/liquid": "^1.4.0",
     "@diplodoc/transform": "^4.65.3",
     "@diplodoc/translation": "^1.7.19",
+    "@gravity-ui/uikit-themer": "^1.7.0",
+    "@types/chroma-js": "^3.1.2",
     "chalk": "^4.1.2",
+    "chroma-js": "^3.2.0",
     "commander": "^12.0.0",
     "csp-header": "^5.2.1",
     "dependency-graph": "^1.0.0",
