fix: prevent metadata loss in multi-threaded md2md builds

--- a/tests/mocks/regression/input/presets.yaml
+++ b/tests/mocks/regression/input/presets.yaml
@@ -4,6 +4,9 @@ default:
   product: root
   user: Bob
   img_3: 3.png
+  # Test for race condition fix - __system should appear in output metadata
+  __system:
+    testVar: test-value
 
 internal:
   default-var: default-var-internal-value
