--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-storage": "^3.758.0",
     "@diplodoc/latex-extension": "^1.4.1",
-    "@diplodoc/lint": "^1.3.3",
+    "@diplodoc/lint": "1.3.3",
     "@diplodoc/mermaid-extension": "^1.3.5",
     "@diplodoc/openapi-extension": "^5.1.0",
     "@diplodoc/page-constructor-extension": "^0.13.0",
