--- a/package.json
+++ b/package.json
@@ -118,15 +118,15 @@
     "@types/js-yaml": "4.0.9",
     "@types/json-stringify-safe": "5.0.3",
     "@types/lodash": "4.14.195",
-    "@types/markdown-it": "13.0.9",
+    "@types/markdown-it": "^13.0.9",
     "@types/mime-types": "2.1.4",
-    "@types/node": "18.19.4",
+    "@types/node": "^22.19.7",
     "@vitest/coverage-v8": "^3.2.1",
     "ajv": "^8.11.0",
     "async": "^3.2.4",
     "axios": "^1.7.8",
     "chokidar": "^4.0.1",
-    "esbuild": "^0.23.1",
+    "esbuild": "^0.27.2",
     "html-escaper": "^3.0.3",
     "husky": "8.0.3",
     "mime-types": "2.1.35",
