--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ name: Release Package to npm
 
 on:
   release:
-    types: [created, published]
+    types: [published]
   workflow_dispatch: # Allow manual triggering
 
 permissions:
