--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,3 +50,7 @@ jobs:
 
       - name: Run build
         run: npm run build
+
+      - name: Run e2e tests
+        working-directory: tests
+        run: npm ci && npm test
