chore: Update workflows

--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "node-html-parser": "6.1.5",
     "simple-git": "3.22.0",
     "slugify": "1.6.5",
+    "strip-ansi": "^7.1.2",
     "svgo": "3.3.2",
     "ts-patch": "3.3.0",
     "typescript": "5.4.5",
