--- a/package.json
+++ b/package.json
@@ -76,11 +76,13 @@
     ]
   },
   "dependencies": {
-    "@diplodoc/client": "^5.2.0",
+    "@diplodoc/client": "^5.2.1",
     "@diplodoc/liquid": "^1.4.0",
-    "@diplodoc/transform": "^4.65.3",
+    "@diplodoc/transform": "^4.68.1",
     "@diplodoc/translation": "^1.7.19",
+    "@gravity-ui/uikit-themer": "^1.7.0",
     "chalk": "^4.1.2",
+    "chroma-js": "^3.2.0",
     "commander": "^12.0.0",
     "csp-header": "^5.2.1",
     "dependency-graph": "^1.0.0",
@@ -121,6 +123,7 @@
     "@types/markdown-it": "^13.0.9",
     "@types/mime-types": "2.1.4",
     "@types/node": "^22.19.0",
+    "@types/chroma-js": "^3.1.2",
     "@vitest/coverage-v8": "^3.2.1",
     "ajv": "^8.11.0",
     "async": "^3.2.4",
