--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -13,7 +13,8 @@
         {"type": "refactor", "section": "Refactoring"},
         {"type": "docs", "section": "Documentation"},
         {"type": "chore", "section": "Chores"},
-        {"type": "revert", "section": "Reverts"}
+        {"type": "revert", "section": "Reverts"},
+        {"type": "deps", "section": "Deps"}
       ]
     }
   },
